refactor: 引入 IDbAdaptor 适配器层，收口数据库访问路径 (2.0.0-alpha-20260809.1) --- 1. 新增 core/IDbAdaptor 适配器接口与独立注册表 IDbAdaptor.FactoryRegistry，    数据读写统一经适配器完成，分析器与消费端不再直接接触 IChunkDb； 2. 新增 core/RawDbAdaptor（默认兜底）与 components/analyzer/SignDbAdaptor，    QShopDbAdapter 改为实现 IDbAdaptor 并配 Factory，解除其与 IChunkDb 的构造耦合； 3. 新增 core/db/DbManager 承接目录级职责（列表/定位/打开或新建/删除/1.x 遗留迁移），    DbPackage 回归单包内聚（元数据、负载文件、适配器、生命周期）； 4. IChunkDb 瘦身：移除 getScanId/getAnalyzerId/getFactoryId/getFormatVersion 与    createMetadataOnly，工厂签名简化为 create(DbStorage)，元信息统一由 DbPackage 管理； 5. 视图匹配语义改为按 adaptorId：ITypeDescriptor.applicableAdaptors() 取代    applicableAnalyzers()，空集不再表示「通用」而是不可见，无匹配时回退 raw 视图；    新增 DbViewProviderRegistry.forAdaptor 统一过滤； 6. AnalyzerRegistry 移除默认视图关联，改为 getAdaptorId 推导；    ChunkScannerMod 装配时按 raw → sign → qshop 顺序注册适配器； 7. 公共 API 调整：DatabaseApi 移除 openDatabase/openDatabaseMetadataOnly，    exportTsv 改收 DbPackage，列表/查找转发 DbManager；RegistryApi 移除    registerAnalyzer(a, viewId)/getDefaultViewProvider/defaultViewProviderId，    新增 registerAdaptor/getAdaptorFactory/hasAdaptor/adaptorFactories/getAdaptorId； 8. 迁移全部调用点：ScanSession 去 db 字段改用 pkg 委托、DatabaseScreen 去 rawChunkDb 并    按 adaptorId 过滤视图、ChunkScannerCommands 与 QShop 消费端改用 pkg.getAdaptor； 9. 同步更新测试与 docs/API.md 第 3.3/3.4/5 章； 10. DbImage.Meta 补充 adaptorId 字段，validate 对未注册的 adaptorId 给出警告；     旧版无该字段的导出包仍按 analyzerId 推导，向后兼容。